updation in BL layer
